--- a/index.html
+++ b/index.html
@@ -602,12 +602,12 @@
 <body>
 
   <div class="page">
-    <!-- NAVBAR -->
-    <header class="nav">
-      <div class="nav-left">
-        <div class="logo-circle" style="color:white; font-weight:700; font-size:16px; display:flex; align-items:center; justify-content:center;">
-  H+
-</div>
+<!-- NAVBAR -->
+<header class="nav">
+  <div class="nav-left">
+    <div class="logo-circle">
+      <img src="./logo.png" alt="Hippo+ logo" />
+    </div>
 
         <div>
           <div class="brand-title">Hippo+</div>
@@ -915,3 +915,4 @@
   </script>
 </body>
 </html>
+
