--- a/index.html
+++ b/index.html
@@ -679,8 +679,9 @@
                 <span>MON • 08:00</span>
                 <span>76% 🔋</span>
               </div>
-            <div class="phone-hippo-orb" style="color:white; font-weight:700; font-size:20px; display:flex; align-items:center; justify-content:center;">
-  H+
+            <div class="phone-hippo-orb" >
+              <img src="./logo.png" alt="Hippo+ logo" />
+
 </div>
 
               <div class="phone-title">Hey, I’m Hippo+</div>
@@ -915,4 +916,5 @@
   </script>
 </body>
 </html>
+
 
