--- a/index.html
+++ b/index.html
@@ -619,10 +619,12 @@
     <!-- NAVBAR -->
     <header class="nav">
       <div class="nav-left">
-        <div class="logo-circle">
-          <!-- 3D Hippo logo -->
-          <img src="./logo.png" alt="Hippo+ logo" />
-        </div>
+   
+       <!-- NAVBAR logo -->
+<div class="logo-circle">
+  <img src="./Adver/logo.png" alt="Hippo+ logo" />
+</div>
+
         <div>
           <div class="brand-title">Hippo+</div>
           <div class="brand-sub">Your AI fitness buddy</div>
@@ -945,3 +947,4 @@
   </script>
 </body>
 </html>
+
