--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
    
        <!-- NAVBAR logo -->
 <div class="logo-circle">
-  <img src="./Adver/logo.png" alt="Hippo+ logo" />
+  <img src="./logo.png" alt="Hippo+ logo" />
 </div>
 
         <div>
@@ -947,4 +947,5 @@
   </script>
 </body>
 </html>
+
 
